updates to search

--- a/search.html
+++ b/search.html
@@ -16,7 +16,7 @@
 <div>
 <script>
   (function() {
-    var cx = '000643393558310251442:_ykzhv2wn1u';
+    var cx = '000643393558310251442:hqba4ygvqf4';
     var gcse = document.createElement('script');
     gcse.type = 'text/javascript';
     gcse.async = true;
