Fix .JPG to .jpg

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>The Covenant Library</title>
 </head>
 
-<body BACKGROUND=BK1a.JPG>
+<body BACKGROUND=BK1a.jpg>
 <h1><center>The Covenant Library</center></h1>
 <center><i>"...immerse yourselves in this Ocean<br>in whose depths lay hidden<br>the pearls of wisdom and of utterance..."</i> <br><small>--Bahá'u'lláh</small></center>
 <h2><center>Table of Contents</center></h2>
