--- a/Baha'i/Baha/KA/p001-011Intro.html
+++ b/Baha'i/Baha/KA/p001-011Intro.html
@@ -37,8 +37,8 @@
    	   THIS YEAR, the 149th of the Bahá'í era, marks the Centenary of the Ascension of Bahá'u'lláh, Bearer of the universal Revelation of God destined to lead humanity to its collective coming of age.  That this occasion should be observed by a community of believers representing a cross-section of the entire human race and established, in the course of a century and a half, in the most remote corners of the globe, is a token of the forces of unity released by Bahá'u'lláh's advent. A further testimony to the operation of these same forces can be seen in the extent to which Bahá'u'lláh's vision has prefigured contemporary human experience in so many of its aspects. It is a propitious moment for the publication of this  first authorized translation into English of the Mother Book of His Revelation, His "Most Holy Book", the Book in which He sets forth the Laws of God for a Dispensation destined to endure for no less than a thousand years.<p>
 	   Of the more than one hundred volumes comprising the sacred Writings of Bahá'u'lláh, the Kitáb-i-Aqdas is of unique importance. <i>"To build anew the whole world"</i> is the claim and Challenge of His Message, and the Kitáb-i-Aqdas is the Charter of the future world civilization that Bahá'u'lláh has come to raise up. Its provisions rest squarely on the foundation established by past religions, for, in the words of Bahá'u'lláh, <i>"This is the changeless Faith of God, eternal in the past, eternal in the future."</i> In this Revelation the concepts of the past are brought to a new level of understanding, and the social laws, changed to suit the age
 	   </td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><small><center><a name="p1">1</a></center><p></small></td>
+       <td width="19%"></td>
+       <td width="1%" VALIGN=top><small><center><a name="p1">1</a></center><p></small></td>
 </tr>
 <tr>
        <td>
@@ -108,11 +108,11 @@
 	   Just as the Bayán had been revealed by the Báb at about the mid-point of His Ministry, Bahá'u'lláh revealed the Kitáb-i-Aqdas around 1873, some twenty years after He had received, in the Siyah-Chál of Tihrán, the intimation of His Revelation. In one of His Tablets He indicates that even after its revelation the Aqdas was withheld by Him for some time before it was sent to the friends in Iran. Thereafter, as Shoghi Effendi has related:
 	   <blockquote>The formulation by Bahá'u'lláh, in His Kitáb-i-Aqdas, of the fundamental laws of His Dispensation was followed, as His Mission drew to a close, by the enunciation of certain precepts and principles which lie at the very core of His Faith, by the reaffirmation of truths He had previously proclaimed, by the elaboration and elucidation of some of the laws He had already laid down, by the revelation of further prophecies and warnings, and by the establishment of subsidiary ordinances designed to supplement the provisions</blockquote>
 	   </td>
-       <td></td>
-       <td VALIGN=top><small><center><a name="p8">8</a></center><p>
-	   <hr>
+       <td VALIGN=top><small>
 	   <hr>
 	   [timing of revelation] <i>The Revelation of Bahá'u'lláh</i>, vol. 2 <a href="../../Others/ROB/V2/p337-369Ch16.html#p354">p. 354</a>
+	   </small></td>
+       <td VALIGN=top><small><center><a name="p8">8</a></center><p>
 	   </small></td>
 </tr>
 <tr>
@@ -122,7 +122,10 @@
 	   Some years after the revelation of the Kitáb-i-Aqdas, Bahá'u'lláh had manuscript copies sent to Bahá'ís in Iran, and in the year 1308 A.H. (1890--91 A.D.), towards the end of His life, He arranged for the publication of the original Arabic text of the Book in Bombay.<p>
 	   A word should be said about the style of language in which the Kitáb-i-Aqdas has been rendered into English. Bahá'u'lláh enjoyed a superb mastery of Arabic,  and preferred to use it in those Tablets and other Writings where its precision of meaning was particularly appropriate to the exposition of basic principle. Beyond the choice of language itself, however, the style employed is of an exalted and emotive character, immensely compelling, particularly to those familiar with the great literary tradition out of which it arose. In taking up his task of translation, Shoghi Effendi faced the challenge of finding an English style which would not only faithfully convey the exactness of the text's meaning, but would also evoke in the reader the spirit of meditative reverence which is a distinguishing feature of response to the original. The form of expression he selected, reminiscent of the style used by the seventeenth-century translators of the Bible, captures the elevated mode of
 	   </td>
-       <td></td>
+       <td VALIGN=top><small>
+   	   <hr>
+	   <a href="../TOB/Cover.html"><i>Tablets of Bahá'u'lláh</i></a>
+	   </small></td>
        <td VALIGN=top><small><center><a name="p9">9</a></center><p></small></td>
 </tr>
 <tr>
