--- a/Baha'i/Baha/KA/p089-102Supp.html
+++ b/Baha'i/Baha/KA/p089-102Supp.html
@@ -36,10 +36,12 @@
        <td width="80%"><center><h2>SOME TEXTS REVEALED<br>BY BAHÁ'U'LLÁH<br>SUPPLEMENTARY TO<br>THE KITÁB-I-AQDAS</h2></center><p>
 	   A number of Tablets revealed by Bahá'u'lláh after the Kitáb-i-Aqdas contain passages supplementary to the provisions of the Most Holy Book.  The most noteworthy of these have been published in <i>Tablets of Bahá'u'lláh revealed after the Kitáb-i-Aqdas</i>.  Included in this section is an extract from the Tablet of Ishráqát.  The text of the three Obligatory Prayers referred to in Questions and Answers and the Prayer for the Dead mentioned in the Text are, likewise, reprinted here.<p>
 	   </td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><small><center><a name="p89">89</a></center><p>
-	   <hr>
+       <td width="19%" VALIGN=top><small>
+   	   <hr>
+	   <a href="../TOB/Cover.html"><i>Tablets of Bahá'u'lláh</i></a><p>
    	   [tablets revealed after the Kitáb-i-Aqdas] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p103-117Ch07.html#p116">p. 116</a>
+	   </small></td>
+       <td width="1%" VALIGN=top><small><center><a name="p89">89</a></center><p>
 	   </small></td>
 </tr>
 <tr>
@@ -57,10 +59,12 @@
 	   This passage, now written by the Pen of Glory, is accounted as part of the Most Holy Book:  The men of God's House of Justice have been charged with the affairs of the people.  They, in truth, are the Trustees of God among His servants and the daysprings of authority in His countries.<p>
 	   O people of God!  That which traineth the world is Justice, for it is upheld by two pillars, reward and punishment.  These two pillars are the sources of life to the world.  Inasmuch as for each day there is a new problem and for every problem an expedient solution, such affairs should be referred to the House of Justice that the members thereof may act according to the needs and requirements of the time.  They that, for the sake of God, arise to serve His Cause, are the recipients of divine inspiration from the unseen Kingdom.  It is incumbent upon all to be obedient unto them.  All matters of State should be referred to the House of Justice, but acts of worship must be observed according to that which God hath revealed in His Book.<p>
 	   O people of Bahá!  Ye are the dawning-places of the love of God and the daysprings of His loving-kindness.  Defile not your tongues with the cursing and reviling of any soul, and guard your eyes against that which is not seemly.  Set forth that which ye possess.  If it be favourably received, your end is attained; if not, to
-       <td></td>
-	   <td VALIGN=top><small><center><a name="p91">91</a></center><p>
-	   <br><hr>
+       <td VALIGN=top><small>
+   	   <hr>
+   	   <i>Tablets of Bahá'u'lláh</i></a>, <a href="../TOB/p001-270TOB.html#para362">p. 128</a><p>
 	   <i>The Revelation of Bahá'u'lláh</i>, vol. 3 p. <a href="../../Others/ROB/V3/p308-321Ch14.html#p319">319</a>; vol. 4 p. <a href="../../Others/ROB/V4/p145-160Ch09.html#p145">145</a>
+	   </small></td>
+	   <td VALIGN=top><small><center><a name="p91">91</a></center><p>
 	   </small>
 	   </td>
 </tr>
@@ -76,10 +80,11 @@
 	   <blockquote><i>Let him then raise his hands in supplication toward God--blessed and exalted be He--and say:</i></blockquote>
 	   O Thou the Desire of the world and the Beloved of
 	   </td>
-       <td></td>
-       <td VALIGN=top><small><center><a name="p92">92</a></center><p>
-	   <hr>
+       <td VALIGN=top><small>
+   	   <hr>
 	   [obligatory prayers] <i>The Revelation of Bahá'u'lláh</i>, vol. 1 <a href="../../Others/ROB/V1/p018-044Ch03.html#p30">p. 30</a>, <a href="../../Others/ROB/V3/p467-483Index.html#Obligatoryprayer">vol. 3</a>, <a href="../../Others/ROB/V4/p463-485Index.html#Obligatoryprayer">vol. 4</a>
+	   </small></td>
+       <td VALIGN=top><small><center><a name="p92">92</a></center><p>
 	   </small></td>
 </tr>
 <tr>
