--- a/Baha'i/Baha/KA/p165-251Notes.html
+++ b/Baha'i/Baha/KA/p165-251Notes.html
@@ -671,7 +671,7 @@
 	  </td>
 	  <td VALIGN=TOP><small>
 	  <hr>
-	  [work as worship] <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p343-370Ch16.html#p351">p. 351</a>; vol. 4 <a href="../../Others/ROB/V4/p161-167Ch10.html#p162">p. 162</a>-163<p>
+	  [work as worship] <i>Tablets of Bahá'u'lláh</i>, <a href="../TOB/p001-270TOB.html#para72">p. 26</a>;<i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p343-370Ch16.html#p351">p. 351</a>; vol. 4 <a href="../../Others/ROB/V4/p161-167Ch10.html#p162">p. 162</a>-163<p>
 	  </small></td>
 	  <td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">193</DIV></center><p></small></td>
 </tr>
@@ -696,7 +696,9 @@
 	  </td>
 	  <td VALIGN=TOP><small>
 	  <hr>
-	  [confession of sins] <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p343-370Ch16.html#p353">p. 353</a>-354
+	  [confession of sins] <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p343-370Ch16.html#p353">p. 353</a>-354<p>
+	  ["such confession..."] <a href="../TOB/p001-270TOB.html#para61"><i>Bishárát</i></a>
+
 	  </small></td>
 	  <td VALIGN=TOP><small><center><DIV TITLE="Page number location is approximate">194</DIV></center><p></small></td>
 </tr>
@@ -723,8 +725,10 @@
 	  </td>
 	  <td VALIGN=top><small>
 	  <hr>
-	  [Kalimát-i-Firdawsíyyih] <i>The Revelation of Bahá'u'lláh</i>, <a href="../../Others/ROB/V3/p467-483Index.html#Kalimát-i-Firdawsíyyih">vol. 3</a>, vol. 4, <a href="../../Others/ROB/V4/p214-226Ch15.html">Ch. 15</a><p>
-	  [abolition of monasticism] <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p343-370Ch16.html#p352">p. 352</a>
+	  ["Living in seclusion..."] <a href="../TOB/p001-270TOB.html#para219"><i>Kalimát-i-Firdawsíyyih</i></a><p>
+	  [<i>Kalimát-i-Firdawsíyyih</i>] vol. 4, <a href="../../Others/ROB/V4/p214-226Ch15.html">Ch. 15</a><p>
+	  [abolition of monasticism] <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p343-370Ch16.html#p352">p. 352</a><p>
+	  ["pious deeds..."] <a href="../TOB/p001-270TOB.html#para59"><i>Bishárát</i></a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p343-370Ch16.html#p353">p. 353</a>; vol. 4 <a href="../../Others/ROB/V4/p161-167Ch10.html#p163">p. 163</a>
 	  </small>
 	  </td>
 	  <td>&nbsp;</td>
@@ -852,7 +856,7 @@
 	  </td>
 	  <td VALIGN=top><small>
 	  <hr>
-	  [Most Great Infallibility] <i>The Revelation of Bahá'u'lláh</i>, vol. 1 <a href="../../Others/ROB/V1/p105-152Ch09.html#p133">p. 133</a>; vol. 2 <a href="../../Others/ROB/V2/p236-269Ch11.html#p262">p. 262</a>; vol. 3 <a href="../../Others/ROB/V3/p275-307Ch13.html#p300">p. 300</a>; vol. 4 <a href="../../Others/ROB/V4/p145-160Ch09.html#p149">p. 149</a><p>
+	  [Most Great Infallibility] <a href="../TOB/p001-270TOB.html#para312"><i>Ishráqát</i></a>, <i>The Revelation of Bahá'u'lláh</i>, vol. 1 <a href="../../Others/ROB/V1/p105-152Ch09.html#p133">p. 133</a>; vol. 2 <a href="../../Others/ROB/V2/p236-269Ch11.html#p262">p. 262</a>; vol. 3 <a href="../../Others/ROB/V3/p275-307Ch13.html#p300">p. 300</a>; vol. 4 <a href="../../Others/ROB/V4/p145-160Ch09.html#p149">p. 149</a><p>
 	  ["He doeth whatsoever He willeth"] <i>Epistle to the Son of the Wolf</i>, <a href="../EW/p001-182.html#para3">p. 1</a>
 	  </small></td>
 	  <td>&nbsp;</td>
@@ -1180,6 +1184,7 @@
 	  </td>
 	  <td VALIGN=top><small>
 	  <hr>
+	  <a href="../TOB/p001-270TOB.html#para375"><i>Ishráqát</i></a><p>
 	  [destruction of books] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p161-167Ch10.html#p165">p. 165</a>-166
 	  </small>
 	  </td>
@@ -1873,7 +1878,8 @@
 	  <td VALIGN=top><hr>
 	  <small>
 	  [carrying arms] <i>The Revelation of Bahá'u'lláh</i>, vol. 2 <a href="../../Others/ROB/V2/p337-369Ch16.html#p355">p. 355</a><p>
-	  [holy war: <i>Lawh-i-Bishárát</i>] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p161-167Ch10.html#p167">p. 167</a>
+	  [holy war: <i>Lawh-i-Bishárát</i>] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p161-167Ch10.html#p167">p. 167</a><p>
+	  ["weapons of war"] <i><a href="../TOB/p001-270TOB.html#para53">Bishárát</a></i>
 	  </small>
 	  </td>
 	  <td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">241</DIV></center><p></small></td>
