--- a/Baha'i/Baha/KA/p258-296Index.html
+++ b/Baha'i/Baha/KA/p258-296Index.html
@@ -116,6 +116,7 @@ Shoghi Effendi, Writings of -- should be Shoghi Effendi, Writings
        <td width="0%"></td>
        <td width="20%" VALIGN=top><small><center><a name="p258">258</a></center><p></small>
 	   <small>
+	   <i>Tablets of Bahá'u'lláh</i>, <a href="../TOB/p277-299Index.html#Kitáb-i-Aqdas">Index</a><p>
 	   <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Kitáb-i-Aqdas">Index</a>, vol. 2 <a href="../../Others/ROB/V2/p469-476Index.html#Kitáb-i-Aqdas">Index</a>, vol. 3 <a href="../../Others/ROB/V3/p467-483Index.html#Kitáb-i-Aqdas">Index</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Kitáb-i-Aqdas">Index</a>
 	   </small></td>
 </tr>
@@ -471,7 +472,7 @@ Shoghi Effendi, Writings of -- should be Shoghi Effendi, Writings
 	   supplementary to the Kitáb-i-Aqdas, <a href="Preface.html#viii">viii</a>, <a href= "p001-011Intro.html#p8">8</a>-9<br>
 	   <blockquote>
 	   Questions and Answers <i>see</i> <a href="p258-296Index.html#QuestionsandAnswers">Questions and Answers</a><br>
-	   <i>Tablets of Bahá'u'lláh revealed after the Kitáb-i-Aqdas</i>, <a href= "p001-011Intro.html#p9">9</a>, <a href= "p089-102Supp.html#p89">89</a><br>
+	   <a name="TabletsofBahá'u'lláhrevealedaftertheKitáb-i-Aqdas"><i>Tablets of Bahá'u'lláh revealed after the Kitáb-i-Aqdas</i></a>, <a href= "p001-011Intro.html#p9">9</a>, <a href= "p089-102Supp.html#p89">89</a><br>
 	   <blockquote>
 	   Bishárát, <a href= "p165-251Notes.html#note58">n58</a>, <a href= "p165-251Notes.html#note61">n61</a>, <a href= "p165-251Notes.html#note173">n173</a><br>
 	   <a name="Ishráqát">Ishráqát</a>, <a href= "p089-102Supp.html#p89">89</a>, <a href= "p089-102Supp.html#p91">91</a>-92, <a href= "p165-251Notes.html#note75">n75</a>, <a href= "p165-251Notes.html#note109">n109</a><br>
