--- a/Baha'i/Baha/KI/p271-274Index.html
+++ b/Baha'i/Baha/KI/p271-274Index.html
@@ -193,12 +193,12 @@
 <table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
 <tr>
        <td>
-	   	   <FORM ACTION="" METHOD=GET>
+	   	   <FORM ACTION="p259-270GlossaryAndNotes.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
 		   </FORM>
 	   </td>
        <td>
-	   	   <FORM ACTION="Contents.html" METHOD=GET>
+	   	   <FORM ACTION="Cover.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="^" NAME=up>
 		   </FORM>
 		   <FORM ACTION="../../../index.html" METHOD=GET>
@@ -206,7 +206,7 @@
 		   </FORM>
 	   </td>
        <td>
-	   	   <FORM ACTION="" METHOD=GET>
+	   	   <FORM ACTION="../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
 		   </FORM>
 	   </td>
