--- a/Baha'i/Others/ROB/V1/p018-044Ch03.html
+++ b/Baha'i/Others/ROB/V1/p018-044Ch03.html
@@ -63,7 +63,10 @@
 	   In one of His Tablets known as the <i>Lawh-i-Hikmat</i> (Tablet of Wisdom), which contains some of His noblest counsels and
 	   </td>
        <td></td>
-       <td VALIGN=top><small><center><a name="p20">20</a></center><p></small></td>
+       <td VALIGN=top><small><center><a name="p20">20</a></center><p>
+	   <hr>
+	   <a href="../../../Baha/TOB/p001-270TOB.html#para420"><i>Lawh-i-Hikmat</i></a>
+	   </small></td>
 </tr>
 <tr>
        <td>
