--- a/Baha'i/Others/ROB/V1/p105-152Ch09.html
+++ b/Baha'i/Others/ROB/V1/p105-152Ch09.html
@@ -761,6 +761,8 @@
 	   24. Bahá'u'lláh, <i>The Hidden Words</i>, no. <a href="../../../Baha/HiddenWords.html#arabic51">51</a>, Arabic version.<p>
 	   25. Bahá'u'lláh, <i>Epistle to the Son of the Wolf</i>, pp. <a href="../../../Baha/EW/p001-182.html#para90">52</a>-3.<p>
 	   26. <i>ibid.</i>, pp. <a href="../../../Baha/EW/p001-182.html#para138">85</a>-6.
+	   <hr>
+	   [By God! Troubles have failed...] <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para579">p. 210</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../V4/p091-102Ch06.html#p94">p. 94</a>
 	   </small></td>
 </tr>
 <tr>
