--- a/Baha'i/Others/ROB/V2/p065-106Ch04.html
+++ b/Baha'i/Others/ROB/V2/p065-106Ch04.html
@@ -494,6 +494,8 @@ P. 97, replaced Gleanings reference from clxiii to CLXIV
 	   <hr>
 	   27. Bahá'u'lláh, <i>The Hidden Words</i>, no. <a href="../../../Baha/HiddenWords.html#arabic31">31</a>, Arabic.<p>
 	   28. Bahá'u'lláh, <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para52">p. 27</a>.
+	   <hr>
+	   ["The fear of God..."] <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para182">p. 63</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../V4/p011-032Ch02.html#p28">p. 28</a>
 	   </small></td>
 </tr>
 <tr>
