--- a/Baha'i/Others/ROB/V3/p001-031Ch01.html
+++ b/Baha'i/Others/ROB/V3/p001-031Ch01.html
@@ -165,7 +165,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p11">11</a></center><p>
-	   * Published in <i>Tablets of Bahá'u'lláh</i>, pp. 9-17. Not to be confused with the <i>Kitáb-i-Aqdas</i>, the Most Holy Book.<p>
+	   * Published in <i>Tablets of Bahá'u'lláh</i>, pp. <a href="../../../Baha/TOB/p001-270TOB.html#p7">9</a>-17. Not to be confused with the <a href="../../../Baha/KA/Cover.html"><i>Kitáb-i-Aqdas</i></a>, the Most Holy Book. [vol 4. <a href="../V4/p227-238Ch16.html#p227">p. 227</a>]<p>
 	   † According to the shipping records, the Austrian Lloyd steamer was due to leave Alexandria at 11 a.m. on Friday, arriving at Port Sa'íd on Saturday at 5 p.m., at Jaffa on Sunday at 6 p.m., at Haifa on Monday at 8 a.m., and at noon two days later at Cyprus.<p>
 	   ‡ It was here that four of Bahá'u'lláh's followers were not allowed to land and were taken to Cyprus instead, and here that one of them, 'Abdu'l-Ghaffár, threw himself into the sea. See vol. 2, p. <a href="../V2/p397-421Ch19.html#p411">411</a>.<p>
 	   <hr>
