--- a/Baha'i/Others/ROB/V3/p073-086Ch04.html
+++ b/Baha'i/Others/ROB/V3/p073-086Ch04.html
@@ -147,7 +147,7 @@
        <td VALIGN=top><small><center><a name="p81">81</a></center><p>
 	   <hr>
 	   2. <i>The Proclamation of Bahá'u'lláh</i>, p. 22.<p>
-	   3. <i>Tablets of Bahá'u'lláh</i>, p. 219.
+	   3. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#p217">p. 219</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -202,6 +202,8 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p85">85</a></center><p>
 	   * This Tablet was revealed in honour of Mírzá Áqáy-i-Afnán, entitled Núr'u'd-Dín. We shall refer to <a href="../V4/p463-485Index.html#ÁqáMírzáÁqáy-i-Afnán">him</a> and to the <a href="../V4/p463-485Index.html#Lawh-i-Dunyá">Tablet</a> in the next volume.
+	   <hr>
+	   <a href="../../../Baha/TOB/p001-270TOB.html#para248"><i>Lawh-i-Dunyá</i></a>
 	   </small></td>
 </tr>
 <tr>
