--- a/Baha'i/Others/ROB/V3/p108-132Ch06.html
+++ b/Baha'i/Others/ROB/V3/p108-132Ch06.html
@@ -215,7 +215,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p120">120</a></center><p>
-	   * Ustád 'Alí-Akbar was an outstanding follower of Bahá'u'lláh who was martyred in Yazd in 1903. He lived for some years in 'Ishqábád and rendered notable services to the Faith. His memoirs deal mainly with the history of the Cause and the believers in 'Ishqábád. The Tablet of Tajallíyát was revealed in his honour. We shall refer to him in more detail in the <a href="../V4/p463-485Index.html#'Alí-Akbar-i-Banná,Ustád">next volume</a>.
+	   * Ustád 'Alí-Akbar was an outstanding follower of Bahá'u'lláh who was martyred in Yazd in 1903. He lived for some years in 'Ishqábád and rendered notable services to the Faith. His memoirs deal mainly with the history of the Cause and the believers in 'Ishqábád. The <a href="../../../Baha/TOB/p001-270TOB.html#para133">Tablet of Tajallíyát</a> was revealed in his honour. We shall refer to him in more detail in the <a href="../V4/p463-485Index.html#'Alí-Akbar-i-Banná,Ustád">next volume</a>.
 	   <hr>
 	   10. <i>Proclamation</i>, p. 29.<p>
 	   11. <i>ibid</i>. p. 27.
@@ -364,7 +364,7 @@
        <td VALIGN=top><small><center><a name="p130">130</a></center><p>
 	   <hr>
 	   19. 'The Goal of a New World Order', <i>The World Order of Bahá'u'lláh</i>, pp. 33-4.<p>
-	   20. <i>Tablets of Bahá'u'lláh</i>, p. 222.
+	   20. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para600">p. 222</a>.
 	   </small></td>
 </tr>
 <tr>
