--- a/Baha'i/Others/ROB/V3/p204-220Ch10.html
+++ b/Baha'i/Others/ROB/V3/p204-220Ch10.html
@@ -283,7 +283,7 @@
 	   * For further information about him and the change that took place in his attitude towards Bahá'u'lláh see vol. 2, pp. <a href="../V2/p397-421Ch19.html#p399">399</a>-401.<p>
 	   <hr>
 	   11. Quoted by Hájí Mírzá Haydar-'Alí, unpublished biography of Mírzá Abu'l-Fadl, p. 150.<p>
-	   12. <i>Tablets of Bahá'u'lláh</i>, p. 126.
+	   12. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para355">p. 126</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -295,8 +295,8 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p220">220</a></center><p>
 	   <hr>
-	   13. <i>Tablets of Bahá'u'lláh</i>, p. 257.<p>
-	   14. <i>ibid</i>. p. 88.
+	   13. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para703">p. 257</a>.<p>
+	   14. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para263">p. 88</a>.
 	   </small></td>
 </tr>
 
