--- a/Baha'i/Others/ROB/V3/p253-274Ch12.html
+++ b/Baha'i/Others/ROB/V3/p253-274Ch12.html
@@ -295,7 +295,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p270">270</a></center><p>
 	   * When Islám became the main religion of Persia, Arabic words were introduced into the Persian language. The present Persian language incorporates many Arabic words, which have become part of the Persian vocabulary. As against this, there is the 'pure Persian' which is not commonly spoken, but is occasionally written. Some scholars have excelled themselves in this field: Mírzá Abu'l-Fadl was one. But pure Persian is not in general use. In most of Bahá'u'lláh's Writings in Persian, Arabic and Persian words are used together. Only a small number of Bahá'u'lláh's Writings, those addressed to Zoroastrian believers, are mainly revealed in pure Persian.<p>
-	   † This famous passage is to be found also in the <i>Ishráqát</i>.<p>
+	   † This famous passage is to be found also in the <a href="../../../Baha/TOB/p001-270TOB.html#para469"><i>Ishráqát</i></a>.<p>
 	   <hr>
 	   10. <i>Majmú'iy-i-Alváh</i>, p. 259.
 	   </small></td>
