--- a/Baha'i/Others/ROB/V3/p275-307Ch13.html
+++ b/Baha'i/Others/ROB/V3/p275-307Ch13.html
@@ -300,7 +300,7 @@ p. 276 footnote, changed CLXV to CLXVI.
 	   <hr>
 	   15. 'The Unfoldment of World Civilization', <i>The World Order of Bahá'u'lláh</i>, p. 199.<p>
 	   16. <i>Synopsis</i>, p. 11.<p>
-	   17. <i>Tablets of Bahá'u'lláh</i>, p. 164.<p>
+	   17. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para469">p. 164</a>.<p>
 	   <hr>
 	   ["They whom God..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para2">&para;2</a>, <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../../../Baha/GL/p003-346.html#para681">CLV</a>
 	   </small></td>
@@ -316,7 +316,7 @@ p. 276 footnote, changed CLXV to CLXVI.
        <td VALIGN=top><small><center><a name="p295">295</a></center><p>
 	   <hr>
 	   18. <i>The Hidden Words</i>, Arabic <a href="../../../Baha/HiddenWords.html#arabic2">no. 2</a>.<p>
-	   19. <i>Lawh-i-Maqsúd</i>, in <i>Tablets of Bahá'u'lláh</i>, p. 164.
+	   19. <i>Lawh-i-Maqsúd</i>, in <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para469">p. 164</a>.
 	   </small></td>
 </tr>
 <tr>
