--- a/Baha'i/Others/ROB/V3/p308-321Ch14.html
+++ b/Baha'i/Others/ROB/V3/p308-321Ch14.html
@@ -178,7 +178,7 @@
 	   * For more information see <i>Principles of Bahá'í Administration</i>.<p>
 	   † see pp. <a href="p032-051Ch02.html#p49">49</a>-51.<p>
 	   <hr>
-	   9. Lawh-i-Maqsúd, in <i>Tablets of Bahá'u'lláh</i>, p. 168.<p>
+	   9. Lawh-i-Maqsúd, in <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para479">p. 168</a>.<p>
 	   10. <i>Consultation: A Compilation</i>, p. 3.
 	   </small></td>
 </tr>
@@ -216,7 +216,7 @@
        <td VALIGN=top><small><center><a name="p319">319</a></center><p>
 	   <hr>
 	   14. Shoghi Effendi, <i>God Passes By</i>, p. 332.<p>
-	   15. <i>Tablets of Bahá'u'lláh</i>, pp. 128-9.<p>
+	   15. <i>Tablets of Bahá'u'lláh</i>, pp. <a href="../../../Baha/TOB/p001-270TOB.html#para362">128</a>-9.<p>
 	   <hr>
 	   ["This passage..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p089-102Supp.html#p91">p. 91</a>
 	   </small></td>
