--- a/Baha'i/Others/ROB/V3/p322-342Ch15.html
+++ b/Baha'i/Others/ROB/V3/p322-342Ch15.html
@@ -127,7 +127,7 @@
 	   <hr>
 	   3. <i>Synopsis</i>, pp. 15-16.<p>
 	   4. <i>Makátíb-i-'Abdu'l-Bahá</i>, vol. 3, p. 333.<p>
-	   5. <i>Tablets of Bahá'u'lláh</i>, pp. 51-2.<p>
+	   5. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para152">pp. 51</a>-2.<p>
 	   <hr>
 	   ["Unto every father..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para48">&para;48</a><p>
 	   ["In truth, knowledge is..."] <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para50">p. 27</a>
@@ -151,7 +151,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p328">328</a></center><p>
 	   <hr>
-	   6. <i>Tablets of Bahá'u'lláh</i>, p. 68.<p>
+	   6. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para207">p. 68</a>.<p>
 	   7. <i>Bahá'í Education</i>, p. 2.<p>
 	   8. <i>Selections</i>, pp. 126-7.<p>
 	   9. <i>ibid</i>. p. 127.
