--- a/Baha'i/Others/ROB/V3/p343-370Ch16.html
+++ b/Baha'i/Others/ROB/V3/p343-370Ch16.html
@@ -155,10 +155,10 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p351">351</a></center><p>
 	   <hr>
-	   6. Bahá'u'lláh, <i>Tablets</i>, p. 26.<p>
+	   6. Bahá'u'lláh, <i>Tablets</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para72">p. 26</a>.<p>
 	   7. <i>Má'idiy-i-Ásamání</i>, vol. 4, p. 33.<p>
 	   <hr>
-	   ["It is incumbent..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para33">&para;33</a>
+	   ["It is incumbent..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para33">&para;33</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../V4/p161-167Ch10.html#p163">p. 163</a>
 	   </small></td>
 </tr>
 <tr>
@@ -177,7 +177,7 @@
 	   <hr>
 	   [Nineteen Day Feast] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para57">&para;57</a><p>
 	   [abolition of monasticism] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para36">&para;36</a><p>
-	   [Words of Paradise] <i>The Revelation of Bahá'u'lláh</i>, <a href="p467-483Index.html#Kalimát-i-Firdawsíyyih">vol. 3</a>, vol. 4, <a href="../V4/p214-226Ch15.html">Ch. 15</a><p>
+	   [<i>Kalimát-i-Firdawsíyyih</i>] <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../V4/p214-226Ch15.html">Ch. 15</a><p>
 	   [confession of sins] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para34">&para;34</a><p>
 	   </small></td>
 </tr>
@@ -193,8 +193,8 @@
        <td VALIGN=top><small><center><a name="p353">353</a></center><p>
        * Jesus.<p>
 	   <hr>
-	   8. <i>Tablets</i>, p. 71.<p>
-	   9. <i>ibid</i>. p. 24.
+	   8. <i>Tablets</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para219">p. 71</a>.<p>
+	   9. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para58">p. 24</a>.
        </small></td>
 </tr>
 <tr>
