--- a/Baha'i/Others/ROB/V3/p371-399Ch17.html
+++ b/Baha'i/Others/ROB/V3/p371-399Ch17.html
@@ -361,7 +361,7 @@
        <td VALIGN=top><small><center><a name="p389">389</a></center><p>
 	   <hr>
 	   24. <i>Memorials</i>, p. 93.<p>
-	   25. <i>Tablets</i>, pp. 148-9.
+	   25. <i>Tablets</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para420">pp. 148</a>-9.
 	   </small></td>
 </tr>
 <tr>
