--- a/Baha'i/Others/ROB/V3/p449-454Biblio.html
+++ b/Baha'i/Others/ROB/V3/p449-454Biblio.html
@@ -88,7 +88,7 @@
 	   <i>Prayers and Meditations by Bahá'u'lláh</i>. Translated by Shoghi Effendi. Wilmette, Illinois: Bahá'í Publishing Trust, 6th RP 1974.<p>
 	   <i>The Proclamation of Bahá'u'lláh to the Kings and Leaders of the World</i>. Haifa: Bahá'í World Centre, 1967.<p>
 	   <i>Qad Ihtaraqa'l-Mukhlisún. The Fire Tablet</i>. London: Bahá'í Publishing Trust, 1980.<p>
-	   <i>Tablets of Bahá'u'lláh revealed after the Kitáb-i-Aqdas</i>. Compiled by the Research Department of the Universal House of Justice and translated by Habíb Taherzadeh with the assistance of a Committee at the Bahá'í World Centre. Haifa: Bahá'í World Centre, 1978.<p>
+	   <i><a href="../../../Baha/TOB/Cover.html">Tablets of Bahá'u'lláh revealed after the Kitáb-i-Aqdas</a></i>. Compiled by the Research Department of the Universal House of Justice and translated by Habíb Taherzadeh with the assistance of a Committee at the Bahá'í World Centre. Haifa: Bahá'í World Centre, 1978.<p>
 	   </blockquote>
 	   BALYUZI, H. M. <i>Bahá'u'lláh. The King of Glory</i>. Oxford: George Ronald, 1980.<p>
 	   <i>Consultation: A Compilation</i>. Extracts from the Writings and Utterances of Bahá'u'lláh, 'Abdu'l-Bahá, Shoghi Effendi, and The Universal House of Justice. Compiled by the Research Department of the Universal House of Justice. Wilmette, Illinois: Bahá'í Publishing Trust, 1980.<p>
